--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <h1>Message Board Homepage</h1>
 
 <ul>
-    {% for post in object_list %}
+    {% for post in all_posts_list %}
     <li>{{ post.text }}</li>
     {% endfor %}
 </ul>
